apps/services/nextcloud/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    gethomepage.dev/description: File sharing and collaboration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: nextcloud.png
    gethomepage.dev/name: Nextcloud
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: nextcloud.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
  tls:
    - hosts:
        - nextcloud.internal
      secretName: homepage-tls
